Fixed Content Collapse

--- a/src/css/VacationCss.css
+++ b/src/css/VacationCss.css
@@ -1,3 +1,4 @@
+
 table.nav	{width: 100%;
 		text-align: right;
 	    border-collapse: collapse;
@@ -56,6 +57,19 @@ td.displayShortNav{
 	display: none;
 }
 }
+
+
+/* FOOTER */
+
+footer {
+	width: 100%;
+	background:#F0F0F0;
+	text-align: center;
+	bottom: 0;
+
+
+}
+
 
 
 
